# python-changes

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Python_Changes_Per_Version.ipynb  README.md  pyproject.toml
